<resources>
    <string name="lang_code">en</string>
    <string-array name="languages">
        <item>Dansk</item>
        <item>Deutsch</item>
        <item>English</item>
        <item>Español</item>
        <item>русский</item>
        <item>Svenska</item>
        <item>Français</item>
    </string-array>
    <string name="app_name" translatable="false">Tricktionary</string>
    <string name="app_label" translatable="false">Jump Rope Tricktionary</string>
    <string name="google_sign_in_auth_id" translatable="false">1048157266079-6m9smvmrrs2vagok5b973dqe7cvcf3e9.apps.googleusercontent.com</string>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="logo_transition" translatable="false">36420</string>
    <string name="tricktionary_transition" translatable="false">42036</string>
    <string-array name="speed_event_abbreviations" translatable="false">
        <item>srst</item>
        <item>srss</item>
        <item>srsp</item>
        <item>srfs</item>
        <item>ddts</item>
        <item>srps</item>
        <item>srss</item>
        <item>ddfs</item>
    </string-array>
    <string-array name="trick_types" translatable="false">
        <item>@string/basics</item>
        <item>@string/multiples</item>
        <item>@string/power</item>
        <item>@string/manipulation</item>
        <item>@string/releases</item>
        <item>@string/impossible</item>
    </string-array>
    <string-array name="language_abbreviations" translatable="false">
        <item>en</item>
        <item>de</item>
        <item>sv</item>
        <item>ru</item>
        <item>es</item>
        <item>da</item>
        <item>fr</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="auto_play_videos">Auto-Play Videos:</string>
    <string name="avg_tricks">Average Tricks per User:</string>
    <string name="basics">Basics</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>
    <string name="completed_tricks">Completed Tricks</string>
    <string name="completed_tricks_dialogue">The Tricktionary now allows you to save your completed tricks! You have to sign in to use this feature.  Completed tricks will appear as you see above.</string>
    <string name="contact_drawer_description">View your past feedback</string>
    <string name="contact_emails">Receive replies via email</string>
    <string name="contact_general_submitted">Feedback submitted, thank you!</string>
    <string name="contact_in">in</string>
    <string name="contact_incorrect_level">Should be level:</string>
    <string name="contact_incorrect_level_submit">Feedback on incorrect level submitted, thank you!</string>
    <string name="contact_level_range">(1-6)</string>
    <string name="contact_message">Please provide more info</string>
    <string name="contact_more_info">You must provide more information please.</string>
    <string name="contact_name_hint">Your name (optional)</string>
    <string name="contact_reply">Your reply</string>
    <string name="contact_reply_toast">Thanks for the reply!</string>
    <string name="contact_sign_in_prompt">You must sign in to send and view feedback, and so we can answer you.</string>
    <string name="contact_submit_reply">Submit reply</string>
    <string-array name="contact_types">
        <item>General</item>
        <item>Incorrect Level</item>
        <item>Inaccurate Name</item>
        <item>Inaccurate Description</item>
    </string-array>
    <string name="continue_button">Continue</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="federation_official">federation official</string>
    <string name="fisac_level">IRSF Level:</string>
    <string name="home_page">Home page</string>
    <string name="impossible">Impossible</string>
    <string name="instagram">Instagram</string>
    <string name="internet_dialog">This app needs to connect to the internet to download trick information.  This is only done one time whenever tricks are added, after that the info is stored on your device.</string>
    <string name="internet_dialog2">Please connect to a WiFi network or enable your mobile data to download the tricks (it takes less than a second to download so don\'t worry!)</string>
    <string name="judge">judge</string>
    <string name="language">Language:</string>
    <string name="level_1">Level 1:</string>
    <string name="level_2">Level 2:</string>
    <string name="level_3">Level 3:</string>
    <string name="level_4">Level 4:</string>
    <string name="main_activity_feedback_prompt">Submit feeback on</string>
    <string name="manipulation">Manipulation</string>
    <string name="max_tricks">Max Tricks per User:</string>
    <string name="multiples">Multiples</string>
    <string name="next_tricks">Next Tricks:</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string-array name="organizations">
        <item>WJR</item>
        <item>FISAC-IRSF</item>
    </string-array>
    <string-array name="player_styles">
        <item>Minimal</item>
        <item>Chromeless</item>
        <item>Default</item>
    </string-array>
    <string name="power">Power</string>
    <string name="prereqs">Prerequisites:</string>
    <string name="profile_go_to_settings">Go to settings</string>
    <string name="profile_public">Public Profile</string>
    <string name="profile_public_prompt">You must set your profile to public to share</string>
    <string name="profile_share">My Tricktionary Profile</string>
    <string name="profile_share_with">Share your profile with:</string>
    <string name="profile_sign_in">You must sign in to have a profile.</string>
    <string name="public_profile">Public Profile:</string>
    <string name="public_profile_instructions">This will allow you to share your profile with anyone</string>
    <string name="public_profile_title">Public Profile</string>
    <string name="releases">Releases</string>
    <string name="remove">Remove</string>
    <string name="search_hint">Search the Tricktionary</string>
    <string name="settings_drawer_description">Language, video, and profile settings</string>
    <string name="share_prompt">Share link to this trick with:</string>
    <string name="show_breaks">breaks between events.</string>
    <string name="show_drawer_description">Spread routines evenly</string>
    <string name="show_event_move_instructions">Tap an event to move it</string>
    <string-array name="show_events">
        <item>Individuals:</item>
        <item>Pairs:</item>
        <item>Double Dutch Singles:</item>
        <item>Double Dutch Pairs:</item>
        <item>Wheels:</item>
        <item>Three Wheels:</item>
        <item>Others:</item>
    </string-array>
    <string name="show_list">List of names</string>
    <string name="show_main_instructions">Select the names of jumpers doing the event listed below</string>
    <string name="show_min">Each jumper has a minimum of</string>
    <string name="show_new_event">New Event</string>
    <string name="show_remove_event">Remove Event</string>
    <string name="show_remove_prompt">Would you like to remove</string>
    <string name="show_sorted">Sorted Show</string>
    <string name="show_swap_prompt">Which event should this be after?</string>
    <string name="show_writer_instructions">Enter the names of jumpers that are in the show, separated by commas.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_failed">Sign in failed.</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="signing_in">Signing in...</string>
    <string name="speed_anon">Anonymous</string>
    <string name="speed_custom">Custom</string>
    <string name="speed_data_drawer_description">Store your speed scores</string>
    <string name="speed_delete_prompt">Delete? Are you sure?</string>
    <string name="speed_deleted_score">Deleted score</string>
    <string name="speed_drawer_description">Click speed events</string>
    <string name="speed_duration">Duration:</string>
    <string name="speed_edit_score">Edit the display name for this score or delete it forever.</string>
    <string name="speed_event_select">Select Event</string>
    <string name="speed_first_name">First Name</string>
    <string name="speed_instructions">Select an event or a duration then either press start to begin the timing track, or count the first jump to begin the timer.</string>
    <string name="speed_jumps_avg">Jumps per Second (Avg):</string>
    <string name="speed_jumps_lost">Jumps Lost:</string>
    <string name="speed_jumps_max">Jumps per Second (Max):</string>
    <string name="speed_jumps_per_second">Jumps per second</string>
    <string name="speed_last_name">Last Name</string>
    <string name="speed_load_data">Load Score</string>
    <string name="speed_minutes">Minutes</string>
    <string name="speed_misses">Estimated Misses:</string>
    <string name="speed_new_name">Enter new name</string>
    <string name="speed_no_miss_score">Estimated Score (No Misses)</string>
    <string name="speed_save_data">Save Score</string>
    <string name="speed_save_prompt">**Please only save your data if it comes from actually clicking a speed event**</string>
    <string name="speed_saved_data_for">Saved Data for</string>
    <string name="speed_score">Score:</string>
    <string name="speed_score_name_prompt">Enter a name for this score (i.e a jumper\'s name or a team) so you can access it later.  This can be changed or deleted at any time.</string>
    <string name="speed_seconds">Seconds</string>
    <string name="speed_sign_in">You must sign in to save and view speed scores.</string>
    <string name="speed_start_button">Start</string>
    <string name="speed_timer">Speed Timer</string>
    <string name="start_button">Start</string>
    <string name="stats_sign_in">You must sign in to access your profile and store trick statistics.</string>
    <string name="submit_button">Submit</string>
    <string name="submit_camera_needed">Sorry, you need a camera to submit tricks!</string>
    <string name="submit_drawer_description">Send in your jump rope tricks</string>
    <string name="submit_from_gallery">From Gallery</string>
    <string name="submit_instructions">-You may submit videos of either a single trick to be included in the Tricktionary, or you may submit a video to be featured on our Instagram page @jumpropetricktionary\n-Videos can be of any jump rope trick, whether the trick is already in the Tricktionary or not.\n-Please record your videos in landscape\n-Your videos can be no larger than 100Mb\n-If you are able to record in slow motion please do!\n-Please keep your recording as stable as possible, or set up your camera\n-Try to find a plain background that contrasts the color of your rope</string>
    <string name="submit_please_enter_name">Please enter a name.  The other fields are optional.</string>
    <string name="submit_record_video">Record Video</string>
    <string name="or">or</string>
    <string name="use_phone">Use phone number instead</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_account">I already have an account</string>
    <string name="sign_up">Sign Up</string>
</resources>