<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="trictionary.jumproper.com.jumpropetrictionary.activities.Speed"
    android:background="@drawable/background">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/black_bg"
        app:srcCompat="@drawable/ic_add_circle_black_256dp"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:tint="#000000"
        android:layout_centerInParent="true"
        android:layout_marginRight="90dp"
        android:padding="0dp" />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="90dp"
        android:alpha=".9"
        android:clickable="true"
        android:onClick="addJump"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_add_circle_black_256dp"
        android:tint="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/counter"
        android:textSize="40dp"
        android:layout_above="@+id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/plus"
        android:padding="5dp"
        android:gravity="center" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner_shadow"
        android:onClick="startTimer"
        android:padding="10dp"
        android:text="@string/start_button"
        android:textColor="#424242" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00:0"
        android:id="@+id/timer"
        android:textSize="40dp"
        android:visibility="visible"
        android:layout_below="@+id/duration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="bottom" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/event_select"
        android:layout_marginLeft="15dp"
        android:layout_toEndOf="@+id/back_arrow"
        android:autoText="false"
        android:background="@drawable/rounded_corner_shadow"
        android:clickable="true"
        android:onClick="chooseDuration"
        android:padding="8dp"
        android:text="0:30"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/event_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back_arrow"
        android:layout_marginLeft="20dp"
        android:layout_toLeftOf="@+id/event_dropdown"
        android:autoText="false"
        android:background="@drawable/rounded_corner_shadow"
        android:clickable="true"
        android:onClick="selectEvent"
        android:padding="8dp"
        android:text="@string/speed_event_select"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dropdown_arrow"
        android:layout_alignTop="@+id/duration"
        android:layout_toEndOf="@+id/duration"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:padding="10dp"
        android:onClick="chooseDuration"
        android:clickable="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_dropdown"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:padding="10dp"
        android:onClick="selectEvent"
        android:clickable="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/dropdown_arrow" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_arrow"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"
        android:padding="10dp"
        android:alpha=".75"
        android:onClick="mainMenu" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Timing Track"
        android:id="@+id/timing_track"
        android:layout_alignTop="@+id/dropdown_arrow"
        android:layout_toEndOf="@+id/dropdown_arrow"
        android:background="@drawable/rounded_corner_shadow"
        android:textColor="#414140"
        android:padding="11dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/speed_instructions"
        android:textSize="12dp" />


</RelativeLayout>
